--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <title>웹카페</title>
 </head>
 <body>
-  
+  <header class="header">헤더</header>
+  <div class="visual">비주얼</div>
+  <main class="main">메인
+    <div class="group group1">그룹1</div>
+    <div class="group group2">그룹2</div>
+    <div class="group group3">그룹3</div>
+  </main>
+  <article class="slogan">슬로건</article>
+  <footer class="footer">푸터
+    <div class="footer-inner">푸터</div>
+  </footer>
 </body>
 </html>
