--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- 로고 -->
     <h1 class="logo">
       <a href="./index-complete.html">
-        <img src="./assets/logo.png" alt="web cafe" width="165" height="35"/>
+        <img src="./assets/logo.png" alt="web cafe" />
       </a>
     </h1>
     <ul class="member">
