--- a/index.html
+++ b/index.html
@@ -132,11 +132,27 @@
   </header>
   <div class="visual">
     <div class="visual-text">
-      Web Standards &amp; Accessibility
+      Web standards &amp; Accessibility
     </div>
   </div>
   <main class="main">
-    <div class="group group1">그룹1</div>
+    <div class="group group1">
+    <section class="login">
+      <h2 class="login-title">로그인</h2>
+      <form action="" class="login-form"></form>
+      <fieldset>
+        <legend>회원가입 로그인 폼</legend>
+        <div class="user-email">
+          <label for="userEmail">아이디</label>
+          <input type="email" id="userEmail" />
+        </div>
+      </fieldset>
+      <ul class="sign">
+        <li><a href="/">회원가입</a></li>
+        <li><a href="/">아이디/비밀번호 찾기</a></li>
+      </ul>
+    </section>
+    </div>
     <div class="group group2">그룹2</div>
     <div class="group group3">그룹3</div>
   </main>
